--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -6,5 +6,10 @@
     justify-content: center;
     font-size: 30px;
     color: #4d5154;
-    background: #f69a73;
+    
+  }
+
+  .Home {
+    text-decoration: none;
+    color: red;
   }
