--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -6,6 +6,7 @@
     justify-content: center;
     font-size: 30px;
     color: #4d5154;
+    background-image: linear-gradient(to bottom, #0066ff 0%, #d6cd25 100%);
     
   }
 
